update certif section

--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
                     </div>
                 </div>
                 <div class="social">
-                    <div><a href="https://www.linkedin.com/in/aminatou-barry-15491512a"><i class="bi bi-linkedin"></i></a></div>
-                   <div><a href="https://github.com/AminaB"><i class="bi bi-github" ></i></a></div>
+                    <div><a href="https://www.linkedin.com/in/aminatou-barry-15491512a" target="_blank" rel="noopener noreferrer"><i class="bi bi-linkedin"></i></a></div>
+                   <div><a href="https://github.com/AminaB"><i class="bi bi-github" target="_blank" rel="noopener noreferrer"></i></a></div>
                 </div>
 
             </div>
@@ -93,13 +93,13 @@
                 <!-- About Me Column -->
                 <div class="col-md-6 mb-4 about-me">
                     <p class="paragraph">Hello again, thank you for being here!
-                        I’m Aminatou BARRY, a Developer and Junior DevOps professional with a passion for coding,
-                        in my previous role at Orange, my manager described me as having a "Good appetite for coding".
-                        My goal is to grow into a DevOps Engineer role, and I’m dedicated to building the skills to get there on e-learning platform and practicing.
-                        Right now, I am looking for a Developer position in DevOps environment. I am focused on deep understanding of CI/CD pipelines and expanding my expertise in cloud computing.</p>
-                    <p class="paragraph">Outside of tech, I'm a mom who loves racing in Mario Kart with my kid
-                        and diving into audiobooks. Right now, my favorite is "Fils des Brumes" by "Brandon Sanderson".
-                        Each week, I also make time for fitness, a good movie, and sharing meals with family or friends at my favorite restaurants.
+                        I’m Aminatou BARRY, a Developer and Junior DevOps professional with a passion for coding (in my previous role at Orange, my manager described me as having a "Good appetite for coding").
+                        My goal is to grow into a DevOps Engineer role, and I’m dedicated to build the skills to get there on e-learning platform and practicing.</p>
+                    <p class="paragraph">  Right now, I am looking for a Developer position in DevOps environment.
+                    I can't wait for deep understanding of CI/CD pipelines and enhance my expertise in cloud computing.</p>
+                    <p class="paragraph">Outside of tech, I'm a mom who loves to play Mario Kart with my kid.
+                        I love immersing myself in a captivating audiobook. Right now, my favorite is "Fils des Brumes" by "Brandon Sanderson".
+                        Even if I like staying at home in front of good movie, I keep doing fitness 3 to 5 times a week. I cherish sharing meals with family and friends at my favorite restaurants.
                         Thanks again for stopping by!</p>
                 </div>
 
@@ -108,7 +108,7 @@
                     <img src="assets/img/about.jpg" alt="Profile Picture" class="profile-pic mb-3 img_about">
                     <p class="paragraph-bol">Today, I am a Dev Lead at <strong>CNAV</strong>.
                     I work on two major projects : <strong>NEODES</strong> and <strong>NEORAU</strong>. My project deliveries are available <a href="https://www.net-entreprises.fr/" target="_blank" rel="noopener noreferrer">here</a>.</p>
-                    <a href="mailto:your.email@example.com" class="btn email-btn">Email Me</a>
+                    <a href="mailto:your.email@example.com" class="btn email-btn" >Email Me</a>
                 </div>
             </div>
         </div>
@@ -142,8 +142,9 @@
                     </div>
 
                 </div>
+
+
             </div>
-            </p>
         </section>
 
         <div class="container">
@@ -259,13 +260,25 @@
                     <div class="swiper-wrapper">
                         <article class="card-article swiper-slide">
                             <div class="card-image">
+                                <img src="assets/img/certifs/aws_certif.png" alt="card image" class="card-img" style="max-height: 290px; max-width: 290px" >
+                                <div class="card-shadow"></div>
+                            </div>
+                            <div class="card-data">
+                                <h3 class="card-name">AWS Cloud Practitioner</h3>
+                                <p class="card-description">AWS cloud fundamentals </p>
+                                <a href="assets/img/certifs/certif_aws.png" class="card-button" target="_blank" rel="noopener noreferrer"> view more</a>
+                            </div>
+
+                        </article>
+                        <article class="card-article swiper-slide">
+                            <div class="card-image">
                                 <img src="assets/img/certifs/aws_orsys.png" alt="card image" class="card-img">
                                 <div class="card-shadow"></div>
                             </div>
                             <div class="card-data">
                                 <h3 class="card-name">AWS Cloud Practitioner</h3>
                                 <p class="card-description">AWS cloud fundamentals </p>
-                                <a href="assets/img/certifs/aws_orsys.png" class="card-button"> view more</a>
+                                <a href="assets/img/certifs/aws_orsys.png" class="card-button" target="_blank" rel="noopener noreferrer"> view more</a>
                             </div>
 
                         </article>
@@ -277,7 +290,7 @@
                             <div class="card-data">
                                 <h3 class="card-name">Terraform</h3>
                                 <p class="card-description">Terraform beginners</p>
-                                <a href="assets/img/certifs/terraform.jpg" class="card-button"> view more</a>
+                                <a href="assets/img/certifs/terraform.jpg" class="card-button" target="_blank" rel="noopener noreferrer"> view more</a>
                             </div>
 
                         </article>
@@ -289,7 +302,7 @@
                             <div class="card-data">
                                 <h3 class="card-name">Devops : HandBook</h3>
                                 <p class="card-description">Devops initiation</p>
-                                <a href="assets/img/certifs/devops1.jpg" class="card-button"> view more</a>
+                                <a href="assets/img/certifs/devops1.jpg" class="card-button" target="_blank" rel="noopener noreferrer"> view more</a>
                             </div>
                         </article>
                         <article class="card-article swiper-slide">
@@ -300,7 +313,7 @@
                             <div class="card-data">
                                 <h3 class="card-name">Devops : practice</h3>
                                 <p class="card-description">Practice Devops CI/CD with Git </p>
-                                <a href="assets/img/certifs/devops2.jpg" class="card-button"> view more</a>
+                                <a href="assets/img/certifs/devops2.jpg" class="card-button" target="_blank" rel="noopener noreferrer"> view more</a>
                             </div>
                         </article>
                         <article class="card-article swiper-slide">
@@ -311,7 +324,7 @@
                             <div class="card-data">
                                 <h3 class="card-name">Devops : practice</h3>
                                 <p class="card-description">Practice Devops CI/CD </p>
-                                <a href="assets/img/certifs/devops3.jpg" class="card-button"> view more</a>
+                                <a href="assets/img/certifs/devops3.jpg" class="card-button" target="_blank" rel="noopener noreferrer"> view more</a>
                             </div>
                         </article>
                         <article class="card-article swiper-slide">
@@ -322,11 +335,34 @@
                             <div class="card-data">
                                 <h3 class="card-name">Devops : practice with AWS</h3>
                                 <p class="card-description">Practice Devops CI/CD </p>
-                                <a href="assets/img/certifs/devops4_aws.jpg" class="card-button"> view more</a>
+                                <a href="assets/img/certifs/devops4_aws.jpg" class="card-button" target="_blank" rel="noopener noreferrer"> view more</a>
+                            </div>
+                        </article>
+                        <article class="card-article swiper-slide">
+                            <div class="card-image">
+                                <img src="assets/img/certifs/js.jpg" alt="card image" class="card-img">
+                                <div class="card-shadow"></div>
+                            </div>
+                            <div class="card-data">
+                                <h3 class="card-name">JS : Course and Practice</h3>
+                                <p class="card-description">Modern JS </p>
+                                <a href="assets/img/certifs/js.jpg" class="card-button" target="_blank" rel="noopener noreferrer"> view more</a>
+                            </div>
+                        </article>
+                        <article class="card-article swiper-slide">
+                            <div class="card-image">
+                                <img src="assets/img/certifs/nodejs.jpg" alt="card image" class="card-img">
+                                <div class="card-shadow"></div>
+                            </div>
+                            <div class="card-data">
+                                <h3 class="card-name">JS : Course and Practice</h3>
+                                <p class="card-description">Modern JS </p>
+                                <a href="assets/img/certifs/nodejs.jpg" class="card-button" target="_blank" rel="noopener noreferrer"> view more</a>
                             </div>
                         </article>
                     </div>
                 </div>
+
                 <!-- navigation buttons -->
                 <div class="swiper-button-prev">
                     <i class="ri-arrow-left-s-line"></i>
@@ -499,13 +535,13 @@
                                             </ol>
                                         </li>
                                         <li class="work-info-list-item">
-                                            GIP-MDS : my final client, you can read more about them  <a href="https://www.gip-mds.fr/">here</a>
+                                            GIP-MDS : my final client, you can read more about them  <a href="https://www.gip-mds.fr/" target="_blank" rel="noopener noreferrer">here</a>
                                         </li>
                                         <li class="work-info-list-item">
                                             Technology : java, Saturne (CNAV property), Jenkins, XML, HTML/CSS (for software documentation).
                                         </li>
                                         <li class="work-info-list-item">
-                                            Link to download software : <a href="https://www.net-entreprises.fr/declaration/outils-de-controle-dsn-val/">click here</a>.
+                                            Link to download software : <a href="https://www.net-entreprises.fr/declaration/outils-de-controle-dsn-val/" target="_blank" rel="noopener noreferrer">click here</a>.
                                         </li>
                                     </ul>
                                 </div>
@@ -548,13 +584,13 @@
                                             </ol>
                                         </li>
                                         <li class="work-info-list-item">
-                                            GIP-MDS : my final client, you can read more about them  <a href="https://www.gip-mds.fr/">here</a>
+                                            GIP-MDS : my final client, you can read more about them  <a href="https://www.gip-mds.fr/" target="_blank" rel="noopener noreferrer">here</a>
                                         </li>
                                         <li class="work-info-list-item">
                                             Technology : java, Saturne (CNAV property), Jenkins, XML, HTML/CSS (for software documentation).
                                         </li>
                                         <li class="work-info-list-item">
-                                            Link to download software : <a href="https://www.net-entreprises.fr/declaration/outil-pasrau-val/">click here</a>.
+                                            Link to download software : <a href="https://www.net-entreprises.fr/declaration/outil-pasrau-val/" target="_blank" rel="noopener noreferrer">click here</a>.
                                         </li>
                                     </ul>
                                 </div>
