update portfolio card-img

--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                     <div class="swiper-wrapper">
                         <article class="card-article swiper-slide">
                             <div class="card-image">
-                                <img src="assets/img/certifs/aws_certif.png" alt="card image" class="card-img" style="max-height: 290px; max-width: 290px" >
+                                <img src="assets/img/certifs/aws_certif.png" alt="card image" class="card-img" >
 
                             </div>
                             <div class="card-data">
