--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <link rel="stylesheet" href="css/swiper-bundle.min.css" />
 
         <!--favicon -->
+        <link rel="icon" type="image/x-icon" href="favicon.ico">
         <!-- =================== fontawesome ===================== -->
         <script src="https://kit.fontawesome.com/433d1c4f2e.js" crossorigin="anonymous"></script>
 
