--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
         <link rel="stylesheet" href="css/swiper-bundle.min.css" />
 
         <!--favicon -->
-        <link rel="icon" type="image/x-icon" href="favicon.ico">
+        <link rel="shortcut icon" href="favicon.ico" />
+        <link rel="shortcut icon" href="https://aminab.github.io/favicon.ico" />
         <!-- =================== fontawesome ===================== -->
         <script src="https://kit.fontawesome.com/433d1c4f2e.js" crossorigin="anonymous"></script>
 
