--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
         <link rel="stylesheet" href="css/swiper-bundle.min.css" />
 
         <!--favicon -->
-        <link rel="shortcut icon" href="favicon.ico" />
-        <link rel="shortcut icon" href="https://aminab.github.io/favicon.ico" />
+        <link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96" />
         <!-- =================== fontawesome ===================== -->
         <script src="https://kit.fontawesome.com/433d1c4f2e.js" crossorigin="anonymous"></script>
 
