--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>Aminatou's Portfolio</title>
         <meta charset="utf-8">
         <meta name="author" content="Aminatou BARRY">
-        <meta name="description" content="Portfolio web of Aminatou">
+        <meta name="description" content="Portfolio web">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- ===================bootstrap css ===================== -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
@@ -101,7 +101,7 @@
                     <p class="paragraph">Outside of tech, I'm a mom who loves to play Mario Kart with his son.
                         I love immersing myself in a captivating audiobook. Right now, my favorite is "Fils des Brumes" by "Brandon Sanderson".
                         Even if I like staying at home in front of good movie, I keep doing fitness 3 to 5 times a week. I cherish sharing meals with family and friends at my favorite restaurants.
-                        Thanks again for stopping by!</p>
+                        Thanks for stopping by!</p>
                 </div>
 
                 <!-- Profile Picture, Job Title, and Email Button Column -->
