--- a/index.html
+++ b/index.html
@@ -621,7 +621,8 @@
                                 <div class="work-info-content">
                                     <i class="fa-solid fa-circle-xmark work-info-close"></i>
                                     <h2 class="work-info-title">Git, Jenkins, SonaQube, Nexus or AWS ECR, ECS</h2>
-                                    <p class="paragraph">Automate <strong>vprofile</strong> project : add war file in nexus or build image and add to Amazon ECR, and send build status notifications to Slack Channel</p>
+                                    <p class="paragraph">Automate <strong>vprofile</strong> project : add war file in nexus or build image and add to Amazon ECR. <br>
+                                        Send build status notifications to Slack Channel</p>
                                     <p class="paragraph">Deploy project in Amazon ECS cluster service </p>
                                     <ul class="work-info-list grid">
                                         <li class="work-info-list-item">
@@ -650,7 +651,7 @@
                                     <i class="fa-solid fa-circle-xmark work-info-close"></i>
                                     <h2 class="work-info-title">Azure AD B2C with Spring and Angular</h2>
                                     <p class="paragraph">In this use case, I secured an Authentication with spring security and Azure AD B2C tenant </p>
-                                    <p class="paragraph">From angular welcome page, user can redirect for registration or authentication to Azure user flows pages.
+                                    <p class="paragraph">From angular welcome page, user can redirect for registration or authentication to Azure user flows pages.<br>
                                         After authentication, user will return to my angular welcome page with an authent status.</p>
                                     <ul class="work-info-list grid">
                                         <li class="work-info-list-item">
@@ -700,7 +701,7 @@
                         <img src="assets/img/portfolio/portfolio-1.jpg" alt=""/>
                         <div class="layer">
                             <h3> Sending Money App. Minimal version</h3>
-                            <p>This App is for one user(frien of mine), he wanted to have a backup of his transactions.</p>
+                            <p>This App is for one user(friend of mine), he wanted to have a backup of his transactions.</p>
                             <a class="more-info"><i class="fa-solid fa-info"></i></a>
                             <div class="work-info" >
                                 <div class="work-info-content">
