--- a/index.html
+++ b/index.html
@@ -157,14 +157,12 @@
                             <i class="fas fa-code icon"></i>
                             <h5>Front End</h5>
                             <div class="container p-4 bg-white rounded ">
-
-
                                 <div class="d-flex flex-column mb-4">
                                     <h5>Languages</h5>
                                     <ul class="list-unstyled ps-3">
+                                        <li>JavaScript</li>
                                         <li>HTML</li>
                                         <li>CSS</li>
-                                        <li>JavaScript</li>
                                     </ul>
                                 </div>
 
@@ -189,7 +187,6 @@
                             <h5>Back End</h5>
                             <div class="container p-4 bg-white rounded ">
                                 <!-- Introductory Text -->
-
 
                                 <div class="d-flex flex-column mb-4">
                                     <h5>Languages</h5>
@@ -226,7 +223,7 @@
                             <h5>DevOps & CICD</h5>
                             <div class="container p-4 bg-white rounded ">
                                 <div class="d-flex flex-column mb-4">
-                                    <h5>Stack</h5>
+                                    <h5>Automation Tools</h5>
                                     <ul class="list-unstyled ps-3">
                                         <li>Git</li>
                                         <li>Maven</li>
@@ -241,7 +238,6 @@
                                     <h5>Cloud</h5>
                                     <ul class="list-unstyled ps-3">
                                         <li>AWS</li>
-
                                     </ul>
                                 </div>
                             </div>
