--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                     <div class="col-md-4 skill-column">
                         <div>
                             <i class="fas fa-tools icon"></i>
-                            <h5>DevOps & CICD</h5>
+                            <h5>DevOps & CI/CD</h5>
                             <div class="container p-4 bg-white rounded ">
                                 <div class="d-flex flex-column mb-4">
                                     <h5>Automation Tools</h5>
