--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
                 <div class="col-md-6 mb-4 d-flex align-items-center equal-height">
                     <div class="resume-container">
                         <img src="assets/img/cv.png" alt="Resume Image" class="img-fluid">
-                        <a href="assets/CV2_Aminatou.pdf" download class="btn btn-primary download-btn">
+                        <a href="assets/CV_Aminatou.pdf" download class="btn btn-primary download-btn">
                             <i class="fas fa-download"></i> Download PDF
                         </a>
                     </div>
