add hands-on cicd

--- a/index.html
+++ b/index.html
@@ -636,6 +636,48 @@
                             </div>
                         </div>
                     </div>
+
+
+
+
+
+
+                    <div class="work filter-app">
+                        <img src="assets/img/portfolio/cloud.jpg" alt=""/>
+                        <div class="layer">
+                            <h3> Use Case : Other Hands-on</h3>
+                            <p>Automation : VPC hands-on, Build and deploy using different automation Tools </p>
+                            <a class="more-info"><i class="fa-solid fa-info"></i></a>
+                            <div class="work-info" >
+                                <div class="work-info-content">
+                                    <i class="fa-solid fa-circle-xmark work-info-close"></i>
+                                    <h2 class="work-info-title">Ansible, AWS CI/CD, AWS VPC, Docker</h2>
+                                    <p class="paragraph"><strong>AWS VPC</strong> Hands-on : VPC, IPs, Subnets, Route Table Internet Gateway, Nat Gateway, VPC peering, CloudWatch log.
+                                        <a href="https://github.com/AminaB/devops/blob/master/full_devops/aws/vpc/vpc-setup.md" target="_blank" rel="noopener noreferrer">@VPCSetup</a>
+                                    </p>
+                                    <p class="paragraph"><strong>AWS CI/CD </strong> Hands-on : Beanstalk, RDS, BitBucket, AWS Code Build and Code Pipeline.
+                                        <a href="https://github.com/AminaB/devops/blob/master/full_devops/aws/aws-ci-cd/aws-ci-cd.md" target="_blank" rel="noopener noreferrer">@AWSCICDSetup</a>
+                                    </p>
+
+                                    <p class="paragraph"><strong>Docker </strong> Hands-on : Containerize Vprofile Project using Docker.
+                                        <a href="https://github.com/AminaB/devops/blob/master/full_devops/docker/containerization/containerization.md" target="_blank" rel="noopener noreferrer">@ContainerizationSetup</a>
+                                    </p>
+                                    <p class="paragraph"><strong>Ansible</strong> Hands-on  : Ansible Playbooks configuration and Ansible with AWS.
+                                        <a href="https://github.com/AminaB/devops/blob/master/full_devops/ansible/ansible.md" target="_blank" rel="noopener noreferrer">@AnsibleSetup</a>
+                                    </p>
+
+
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+
+
+
+
+
                     <div class="work filter-app">
                         <img src="assets/img/portfolio/cloud.jpg" alt=""/>
                         <div class="layer">
