add hands-on cicd

--- a/index.html
+++ b/index.html
@@ -646,7 +646,7 @@
                         <img src="assets/img/portfolio/cloud.jpg" alt=""/>
                         <div class="layer">
                             <h3> Use Case : Other Hands-on</h3>
-                            <p>Automation : VPC hands-on, Build and deploy using different automation Tools </p>
+                            <p>VPC hands-on, Build and deploy using different automation Tools </p>
                             <a class="more-info"><i class="fa-solid fa-info"></i></a>
                             <div class="work-info" >
                                 <div class="work-info-content">
