add hands-on cicd

--- a/index.html
+++ b/index.html
@@ -645,8 +645,8 @@
                     <div class="work filter-app">
                         <img src="assets/img/portfolio/cloud.jpg" alt=""/>
                         <div class="layer">
-                            <h3> Use Case : Other Hands-on</h3>
-                            <p>VPC hands-on, Build and deploy using different automation Tools </p>
+                            <h3> Use Case : Hands-on Activities</h3>
+                            <p>Hands-on Activities, including VPC Configuration and Deployment with Various Automation Tools. </p>
                             <a class="more-info"><i class="fa-solid fa-info"></i></a>
                             <div class="work-info" >
                                 <div class="work-info-content">
